--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "13.4.19",
     "ethers": "^5.7.2",
     "next": "13.4.19",
+    "nft.storage": "^7.1.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
