--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -10,10 +10,13 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.1.7",
+    "dotenv": "^16.3.1",
     "hardhat": "^2.17.1"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.3",
-    "dotenv": "^16.3.1"
+    "hardhat-ethers": "^1.0.1",
+    "hardhat-etherscan": "^1.0.1"
   }
 }
