--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,11 @@
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-stars": "^2.2.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/react-stars": "^2.2.1"
   }
 }
